# coffee-machine-kata-rust

./: Cargo.toml  README.md
src/: beverage.rs  beverage_type.rs  cashier.rs  dispenser.rs  display.rs  drink_maker.rs  drink_maker_dispenser.rs  drink_maker_display.rs  drink_maker_proxy.rs  lib.rs  machine.rs  machine_system.rs  sugar_amount.rs
src/drink_maker/: drink_maker_beverage_server.rs  drink_maker_dispenser.rs  drink_maker_display.rs  mod.rs
src/machine/: beverage.rs  beverage_quantity_checker.rs  beverage_server.rs  cashier.rs  dispenser.rs  display.rs  machine_builder.rs  mod.rs  notifier.rs  reports_printer.rs  sugar_amount.rs
src/machine/beverages/: mod.rs
src/machine_system/: cashier.rs  display.rs  machine.rs  machine_builder.rs  notifier.rs
src/machine_system/beverages/: beverage.rs  beverage_request.rs  beverage_server.rs  dispenser.rs
tests/: common.rs  drink_maker_beverage_server_test.rs  drink_maker_display_test.rs  machine_test.rs
tests/common/: beverage_quantity_checker_fake.rs  drink_maker_spy.rs  drink_maker_test_double.rs  dummy_notifier.rs  dummy_reports_printer.rs  mod.rs
