[package]
name = "coffee-machine-kata-rust"
version = "0.1.0"
edition = "2021"
# Tell Cargo not to auto-scan for all tests/*.rs files.
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
test-case = "3.1.0"

[[test]]
name = "machine_test"
